2008-04-10  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-wireless.c
		- (real_get_generic_capabilities): give the driver some time to respond;
			mainly for ipw3945 and the binary regulatory daemon which stupidly
			need a few seconds after resume to actually work.  People should
			really start using iwlwifi instead.

2008-04-10  Dan Williams  <dcbw@redhat.com>

	Patch from Alan Jenkins <alan-jenkins@tuffmail.co.uk>

	* dispatcher-daemon/NetworkManagerDispatcher.c
		- Cache device interface name so it's available after the device has
			been removed; otherwise the device might be gone from NM before
			the dispatcher has had time to ask NM for the interface name

2008-03-26  Dan Williams  <dcbw@redhat.com>

	Patch from Valentine Sinitsyn <e_val@inbox.ru>   (gnome.org #353265)

	* src/named-manager/nm-named-manager.c
		- (compute_nameservers): return blank string if not config
		- (rewrite_resolv_conf): write blank resolv.conf if no config, so that
			cases like disabling wireless remove old information

2008-03-08  Dan Williams  <dcbw@redhat.com>

	Patch from Bas Zoetekouw <bas@debian.org>

	* src/named-manager/nm-named-manager.c
		- (compute_searches): prefer searches before domains
		- (compute_domain): new function
		- (rewrite_resolv_conf): write out the 'domain' and 'searches' options

2008-03-08  Dan Williams  <dcbw@redhat.com>

	Patch from Bas Zoetekouw <bas@debian.org>

	* src/dhcp-manager/nm-dhcp-manager.c
		- (nm_dhcp_manager_get_ip4_config): handle domain-search option too

2008-03-08  Dan Williams  <dcbw@redhat.com>

	Patch from Bas Zoetekouw <bas@debian.org>

	* src/nm-ip4-config.c
	  src/nm-ip4-config.h
		- (nm_ip4_config_add_search, nm_ip4_config_get_search,
		   nm_ip4_config_get_num_searches): add 'searches' as distinct from
			domains.  'searches' is the correct way to store multiple search
			domains, whereas 'domains' is really just supposed to store one
			domain.  Some sites abuse the DHCP 'domain-name' option to push